--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ html {
   margin
 }
 body {
-  background-image: url('http://2.bp.blogspot.com/-qE8nkTr15Lw/U-ECRFVsYAI/AAAAAAAAJ10/6tS0aA20-JA/s1600/pikachu+thunderbolt+1.gif');
+  /*background-image: url('http://2.bp.blogspot.com/-qE8nkTr15Lw/U-ECRFVsYAI/AAAAAAAAJ10/6tS0aA20-JA/s1600/pikachu+thunderbolt+1.gif');*/
   background-size: 1500px 700px;
 
 }
